# test011

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 001_create_users_table.sql
src/: lib.rs  main.rs
src/auth/: jwt.rs  password.rs
src/config/: mod.rs
src/database/: mod.rs
src/handlers/: auth.rs  health.rs  users.rs
src/middleware/: auth.rs
src/models/: user.rs
src/utils/: error.rs
tests/: integration_tests.rs
